# lang-token-cost

./: .gitignore  CLAUDE.md  README.md  measure.py  pyproject.toml
elixir/rest_api/: mix.exs
elixir/rest_api/lib/rest_api/: application.ex  middleware.ex  models.ex  router.ex  routes_posts.ex  routes_users.ex  store.ex
elixir/todo_cli/: mix.exs
elixir/todo_cli/lib/todo_cli/: cli.ex  commands.ex  models.ex  storage.ex
python/rest_api/: pyproject.toml
python/rest_api/rest_api/: main.py  middleware.py  models.py  routes_posts.py  routes_users.py  store.py
python/todo_cli/: pyproject.toml
python/todo_cli/todo_cli/: commands.py  main.py  models.py  storage.py
rust/rest_api/: Cargo.toml
rust/rest_api/src/: error.rs  main.rs  models.rs  routes_posts.rs  routes_users.rs  store.rs
rust/todo_cli/: Cargo.toml
rust/todo_cli/src/: commands.rs  error.rs  main.rs  models.rs  storage.rs
