[project]
name = "lang-token-cost"
version = "0.1.0"
description = "Token cost comparison: why higher-level languages win for LLM-assisted coding"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tabulate>=0.9.0",
    "tiktoken>=0.12.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "RUF"]
