[project]
name = "todo-cli"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "rich>=13",
]

[project.scripts]
todo = "todo_cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "RUF"]
