[package]
name = "todo-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
directories = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "3"
thiserror = "2"

[profile.release]
lto = true
strip = true
